--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,6 +11,9 @@ on:
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
+    inputs:
+      tags:
+        description: 'Test scenario tags'  
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -21,6 +24,8 @@ jobs:
     steps:
       - uses: actions/checkout@v1
       - name: Invoke Lambda
-        run: bash .github/workflows/test.sh
+        run: | 
+          echo "Tags: ${{ github.event.inputs.tags }}" 
+          bash .github/workflows/test.sh 
 
 
