--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,7 +26,8 @@ jobs:
       - name: Invoke Lambda
         run: | 
           echo "Tags: ${{ github.event.inputs.tags }}" 
-          echo ${BRANCH_NAME}
+          echo "GITHUB_REF_NAME=$GITHUB_REF_NAME"
+          echo "BRANCH_NAME=$(echo ${GITHUB_HEAD_REF} | tr / -)"
           bash .github/workflows/test.sh 
 
 
